--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -42,3 +42,11 @@
     }
 }
 
+// item list
+.itemProductoInfo {
+    padding-top: 50px;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
