--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,7 @@
 // fuentes de texto
 
 // colores
-$color1: white;
+$color1: rgb(243, 240, 240);
 $color2: black;
 $color3: #ADAABF;
 $color4: rgba(128, 128, 128, 0.459);
@@ -9,3 +9,5 @@ $color5: #592C30;
 $color6: #5298F2;
 $color7: #07080D;
 $color8: #171A26;
+$color9: rgb(240, 24, 24);
+$color10: green;
