--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -45,3 +45,14 @@
     background-color: transparent;
     color: $color10;
 }
+.botonAddCarrito {
+    // modificacion
+    border-radius: 5px;
+    border: none;
+    // size
+    margin-top: 10px;
+    padding: 5px;
+    // color
+    background-color: $color10;
+    color: $color7;
+}
