--- a/src/scss/items/item.scss
+++ b/src/scss/items/item.scss
@@ -5,7 +5,7 @@
     // modificacion
     border-radius: 5px;
     // size
-    width: 400px;
+    width: 18rem;
     height: auto;
     // color
     background-color: red;
