--- a/src/scss/navegacion/navBar.scss
+++ b/src/scss/navegacion/navBar.scss
@@ -7,6 +7,7 @@
     position: fixed;
     top: -4px;
     border-radius: 5px;
+    z-index: 5;
     // flex
     display: flex;
     justify-content: space-between;
