card item detail

--- a/src/scss/items/ItemDetail.scss
+++ b/src/scss/items/ItemDetail.scss
@@ -3,8 +3,9 @@
 
 .DetalleProducto {
     // modificacion
+    align-items: center;
     border-radius: 5px;
-    border: 1px solid $color7;  
     // size
     margin-left: 2%;
+    margin-top: 70px;
 }
