--- a/src/scss/items/ItemListContainer.scss
+++ b/src/scss/items/ItemListContainer.scss
@@ -1,7 +1,7 @@
 // variables
 @import "../variables";
 
-.itemProductoInfo {
+.productos {
     display: flex;
     flex-direction: column;
     margin-top: 50px;
