--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -7,8 +7,9 @@
     // size
     width: 300px;
     height: auto;
-    margin-left: 2%;
-    margin-top: 2%;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .cantidadCompra {
     // modificacion
