--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,3 @@
-// fuentes de texto
 
 // colores
 $color1: rgb(243, 240, 240);
@@ -11,3 +10,42 @@ $color7: #07080D;
 $color8: #171A26;
 $color9: rgb(240, 24, 24);
 $color10: green;
+
+// text
+
+// fuentes de texto
+$font1: 'Roboto', sans-serif;
+$font2: 'Oswald', sans-serif;;
+$font3: "Century Gothic", CenturyGothic;
+
+// propiedades
+$mayus: uppercase;
+
+// mixin
+@mixin titulo {
+    font-family: $font2;
+    text-rendering: optimizeLegibility;
+    text-transform: $mayus;
+    font-size: 25px;
+    letter-spacing: 2px;
+}
+.tituloScss {
+    @include titulo;
+}
+@mixin text {
+    font-family: $font2;
+    text-rendering: optimizeLegibility;
+    text-transform: $mayus;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+.textScss {
+    @include text;
+}
+// subrayados
+.subrayadoText {
+    background: #013440e3;
+    color: $color3;
+    border-radius: 5px;
+    padding: 3px;
+}
