--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -7,17 +7,22 @@
     // size
     width: 180px;
     height: auto;
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+}
+.stockProducto {
+    font-size: 12px;
+    color: $color1;
 }
 .cantidadCompra {
     // modificacion
+    z-index: 3;
+    position: relative;
     border: 1px solid $color7;
     border-radius: 5px;
     display: grid;
     grid-template-columns: 30% 33% 30%;
     align-items: center;
+    // color
+    background-color: $color1;
 }
 .numeroCantidadCompra {
     margin-left: 10px;
@@ -56,4 +61,12 @@
     // color
     background-color: $color10;
     color: $color7;
+}
+.stockProducto {
+    // modificacion
+    position: relative;
+    // size
+    top: -3px;
+    left: 3px;
+    width: 176px;
 }
