scss boton terminar compra y itemcount

--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -45,8 +45,9 @@
     border: none;
     border-radius: 5px;
     // size
-    width: 100px;
+    width: 60px;
     height: auto;
+    margin-left: 6px;
     // color
     background-color: transparent;
     color: $color10;
@@ -61,6 +62,12 @@
     // color
     background-color: $color10;
     color: $color7;
+    box-shadow: 1px 1px 0px 0px;
+}
+.botonAddCarrito:hover {
+    // color
+    box-shadow: 2px 3px 0px 0px;
+    transition: 0.7s;
 }
 .stockProducto {
     // modificacion
