--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -8,10 +8,6 @@
     width: 180px;
     height: auto;
 }
-.stockProducto {
-    font-size: 12px;
-    color: $color1;
-}
 .cantidadCompra {
     // modificacion
     z-index: 3;
@@ -62,18 +58,33 @@
     // color
     background-color: $color10;
     color: $color7;
-    box-shadow: 1px 1px 0px 0px;
+    box-shadow: 1px 1px 0px 0px $color7;
+}
+.iconoAddCart {
+    // color
+   filter: drop-shadow(1px 1px 0px $color6);
+   color: $color7;
 }
 .botonAddCarrito:hover {
     // color
-    box-shadow: 2px 3px 0px 0px;
+    box-shadow: 2px 3px 0px 0px $color7;
     transition: 0.7s;
+
+    .iconoAddCart {
+         // color
+        filter: drop-shadow(1px 1px 0px $color7);
+        color: $color6;
+        transition: 0.7s;
+    }
 }
 .stockProducto {
     // modificacion
     position: relative;
+    font-size: 12px;
     // size
     top: -3px;
     left: 3px;
     width: 174px;
+    // color
+    color: $color1;
 }
