--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -6,9 +6,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-.body {
+.background {
     // background
-    // background-color: $color7;
-    background-color: $color1;
+    background-color: $color7;
     font-family: $font2;
 }
