--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -71,18 +71,25 @@
     border: none;
     // size
     margin-top: 10px;
-    padding: 5px;
+    padding: 5px; 
+}
+.botonAddCarritoColor {
     // color
-    background-color: $color10;
     color: $color7;
+    background-color: $color10;
     box-shadow: 0px 0px 2px 0px $color6;
+}
+.botonAddCarritoColorBlock {
+    // color
+    color: $color7;
+    background-color: $color3;
 }
 .iconoAddCart {
     // color
    filter: drop-shadow(1px 1px 0px $color6);
    color: $color7;
 }
-.botonAddCarrito:hover {
+.botonAddCarritoColor:hover {
     // color
     box-shadow: 0px 1px 2px 1px $color10;
     transition: 0.2s;
