--- a/src/scss/items/ItemDetail.scss
+++ b/src/scss/items/ItemDetail.scss
@@ -49,3 +49,28 @@
     width: 40rem;
     color: $color1;
 }
+// boton encargar
+.botonEncargarCarrito {
+    // modificacion
+    border-radius: 5px;
+    border: none;
+    // size
+    margin-top: 10px;
+    padding: 5px; 
+}
+.botonEncargarCarritoColor {
+    // color
+    color: $color7;
+    background-color: $color11;
+    box-shadow: 0px 0px 2px 0px $color1;
+}
+.botonEncargarCarritoColor:hover {
+    // color
+    box-shadow: 0px 1px 2px 1px $color11;
+    transition: 0.2s;
+}
+.botonEncargarCarritoColorBlock {
+    // color
+    color: $color7;
+    background-color: $color3;
+}
