--- a/src/scss/items/ItemDetail.scss
+++ b/src/scss/items/ItemDetail.scss
@@ -49,6 +49,9 @@
     width: 40rem;
     color: $color1;
 }
+.encargoProducto {
+    color: $color11;
+}
 // boton encargar
 .botonEncargarCarrito {
     // modificacion
