--- a/src/scss/items/item.scss
+++ b/src/scss/items/item.scss
@@ -23,6 +23,12 @@
 .categoriaProducto {
     color: $color1;
 }
+.encargoProducto {
+    color: $color11;
+}
+.disponibleProducto {
+    color: $color10;
+}
 // boton
 .botonVerMas {
     // modificacion
