--- a/src/components/navegacion/footer/Footer.scss
+++ b/src/components/navegacion/footer/Footer.scss
@@ -3,10 +3,9 @@
 
 .footer {
     // modificacion
-    border-radius: 8px;
-    position: relative;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
     // size
-    top: 30px;
     width: 100%;
     height: 100px;
     // color
