--- a/src/scss/navegacion/navBar.scss
+++ b/src/scss/navegacion/navBar.scss
@@ -24,6 +24,7 @@
 // logo
 .nav__bar__logo--modificacion {
     text-decoration: none;
+    font-family: $font4;
 }
 .nav__bar__logo--size {
     font-size: 30px;
