--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -27,6 +27,17 @@
     margin-right: 10px;
     color: $color6;
 }
+.stockProducto {
+    // modificacion
+    position: relative;
+    font-size: 12px;
+    // size
+    top: -3px;
+    left: 3px;
+    width: 174px;
+    // color
+    color: $color1;
+}
 // botones
 .botonRemove {
     // modificacion
@@ -69,40 +80,65 @@
     // modificacion
     border-radius: 5px;
     border: none;
+    text-transform: uppercase;
+    letter-spacing: 0.2px;
     // size
+    width: 250px;
     margin-top: 10px;
     padding: 5px; 
 }
 .botonAddCarritoColor {
     // color
     color: $color7;
-    background-color: $color10;
-    box-shadow: 0px 0px 2px 0px $color6;
+    background-color: $color6;
+    box-shadow: 0px 4px 15px $color3;
+    transition: all 0.3s ease;
 }
 .botonAddCarritoColor:hover {
+    // size
+    transform: translateY(-3px);
     // color
-    box-shadow: 0px 1px 2px 1px $color10;
-    transition: 0.2s;
+    color: $color7;
+    background-color: $color10;
+    box-shadow: 0px 8px 15px $color10;
 }
 .botonAddCarritoColorBlock {
     // color
     color: $color7;
     background-color: $color3;
+    box-shadow: 0px 4px 10px $color3;
 }
 .iconoAddCart {
     // color
-   filter: drop-shadow(1px 1px 0px $color6);
    color: $color7;
 }
-
-.stockProducto {
+// boton encargar
+.botonEncargarCarrito {
     // modificacion
-    position: relative;
-    font-size: 12px;
+    border-radius: 5px;
+    border: none;
     // size
-    top: -3px;
-    left: 3px;
-    width: 174px;
+    margin-top: 10px;
+    padding: 5px; 
+}
+.botonEncargarCarritoColor {
     // color
-    color: $color1;
+    color: $color7;
+    background-color: $color6;
+    box-shadow: 0px 4px 15px $color3;
+    transition: all 0.3s ease;
+}
+.botonEncargarCarritoColor:hover {
+    // size
+    transform: translateY(-3px);
+    // color
+    color: $color7;
+    background-color: $color11;
+    box-shadow: 0px 8px 15px $color11;
+}
+.botonEncargarCarritoColorBlock {
+    // color
+    color: $color7;
+    background-color: $color3;
+    box-shadow: 0px 4px 10px $color3;
 }
