--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,7 +9,7 @@ $color6: #5298F2;
 $color7: #07080D;
 $color8: #171A26;
 $color9: rgb(240, 24, 24);
-$color10: green;
+$color10: rgba(11, 173, 11, 0.952);
 $color11: orange;
 
 // text
@@ -18,6 +18,8 @@ $color11: orange;
 $font1: 'Roboto', sans-serif;
 $font2: 'Oswald', sans-serif;;
 $font3: "Century Gothic", CenturyGothic;
+$font4: 'Bebas Neue', regular 400;
+$font5: 'Homenaje', sans-serif;
 
 // propiedades
 $mayus: uppercase;
