--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -3,9 +3,7 @@
 
 .cardCantidadProducto {
     // modificacion
-    text-align: center;
-    // size
-    width: 180px;
+    text-align: left;    
     height: auto;
 
     .cantidadCompra {
@@ -15,12 +13,15 @@
 }
 .cantidadCompra {
     // modificacion
+    text-align: center;
     z-index: 3;
     position: relative;
     border-radius: 5px;
     display: grid;
     grid-template-columns: 30% 33% 30%;
     align-items: center;
+    // size
+    width: 180px;
 }
 .numeroCantidadCompra {
     margin-left: 10px;
@@ -29,6 +30,7 @@
 }
 .stockProducto {
     // modificacion
+    text-align: center;
     position: relative;
     font-size: 12px;
     // size
