--- a/src/components/loader/Loader.scss
+++ b/src/components/loader/Loader.scss
@@ -7,13 +7,11 @@
     width: 100%;
     height: 100vh;
     // color
-    color: $color6;
-    background: radial-gradient(circle, $color7 0%, $color6 11%, $color7 48%, $color7 64%, $color7 100%);
+    background: linear-gradient(to right, $color7, $color7, $color6);
     background-size: 400% 400%;
-    position: relative;
-    animation: fondoCarga 10s ease-in-out infinite;
+    animation: backgroundCarga 10s infinite ease-in-out;
 }
-@keyframes fondoCarga{
+@keyframes backgroundCarga{
     0%{background-position: 0 50%;}
     50%{background-position: 100% 50%;}
     100%{background-position: 0 50%;}
