--- a/src/components/navegacion/footer/Footer.scss
+++ b/src/components/navegacion/footer/Footer.scss
@@ -5,51 +5,52 @@
     // modificacion
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
     // size
+    padding-left: 10%;
+    padding-top: 10px;
     width: 100%;
     height: 100px;
     // color
     background-color: $color8;
 
-    p {
-        font-family: $font2;
-        // size
-        padding-left: 2%;
-        padding-top: 10px;
-
+    div {
+        text-align: center;
     }
 }
 
-.linkFormulario {
+.textFooter {
     // modificacion
     text-decoration: none;
     position: relative;
     cursor: pointer;
+    // size
+    width: 160px;
     // color
     color: $color3;
 }
-.linkFormulario:hover {
+.textFooter:hover {
     // color
     color: $color6;
     transition: 1.5s;
 }
-.linkFormulario::before {
+.textFooter::before {
     content: '';
     position: absolute;
     transform-origin: right;
     transform: scaleX(0);
-    border-radius: 5px;
     // size
     bottom: -2px;
-    left: 2;
-    width: 150px;
+    left: 0;
+    width: 100%;
     height: 1px;
     // color
-    background: linear-gradient(to right, $color3, $color6, $color6 );
+    background: linear-gradient(to right, $color1, $color6, $color6 );
     transition: 0.4s;
 
 }
-.linkFormulario:hover::before {
+.textFooter:hover::before {
     transform: scaleX(1);
     transform-origin: left;
 }
