scss boton remove

--- a/src/scss/carrito/Carrito.scss
+++ b/src/scss/carrito/Carrito.scss
@@ -30,7 +30,7 @@
     align-items: center;
     margin-bottom: 10px;
     // color
-    background-color: $color7;
+    background: linear-gradient(to right, $color8, $color7, $color8);
 }
 .imgCarrito img {
     // modificacion
@@ -63,22 +63,28 @@
 // boton remove
 .botonCartRemove {
     // modificacion
+    transform: scale(1);
     border: none;
     border-radius: 5px;
+    // color
     background-color: $color6;
+    box-shadow: 0px 0px 0px $color3;
+    transition: all 0.3s ease;
     // size
     padding: 0px 2px 2px 2px;
     margin-left: 80%;
+}
+.botonCartRemove:hover {
+    // size
+    transform: translateY(-3px);
+    // color
+    background-color: $color9;
+    box-shadow: 0px 8px 15px $color9;
 }
 // icono
 .iconoCartRemove {
     // color
     color: $color7;
-}
-.iconoCartRemove:hover {
-    // color
-    color: $color9;
-    transition: 0.7s;
 }
 // otros
 .botonesBorradoCompra {
