--- a/src/scss/buttons/ButtonVolver.scss
+++ b/src/scss/buttons/ButtonVolver.scss
@@ -20,6 +20,8 @@
 }
 // icono
 .iconoVolver {
+    // modificacion
+    transform: scale(1);
     // size
     font-size: 20px;
     // color
@@ -29,4 +31,8 @@
     // color
     color: $color9;
     transition: 0.7s;
+}
+.iconoVolver:active {
+    // modificacion
+    transform: scale(0.90);
 }
