--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -78,6 +78,7 @@
     // color
     color: $color3;
 }
+// caracteristicas
 .botonAddCarrito {
     // modificacion
     border-radius: 5px;
@@ -90,7 +91,10 @@
     margin-top: 10px;
     padding: 5px; 
 }
+// compra
 .botonAddCarritoColor {
+    // modificacion
+    transform: scale(1);
     // color
     color: $color7;
     background-color: $color6;
@@ -105,6 +109,10 @@
     background-color: $color10;
     box-shadow: 0px 8px 15px $color10;
 }
+.botonAddCarritoColor:active {
+    transform: scale(0.90);
+}
+// blockeado
 .botonAddCarritoColorBlock {
     // color
     color: $color7;
