--- a/src/scss/items/ItemDetail.scss
+++ b/src/scss/items/ItemDetail.scss
@@ -20,8 +20,13 @@
 .detalleProductoInfo {
     // modificacion
     display: flex;
+    border-radius: 5px;
     // size
+    width: 74rem;
     margin-top: 10px;
+    padding: 20px 20px 20px 20px;
+    // color
+    background: linear-gradient(to right, $color8, $color7, $color8);
 }
 .detalleProductoInfo img {
     // modificiacion
