--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,7 +11,7 @@ $color8: #171A26;
 $color9: rgb(240, 24, 24);
 $color10: rgba(11, 173, 11, 0.952);
 $color11: orange;
-
+$color: #5297f285;
 // text
 
 // fuentes de texto
