--- a/src/components/carrito/Carrito.scss
+++ b/src/components/carrito/Carrito.scss
@@ -21,7 +21,7 @@
 .itemProductoCarrito {
     // modificacion
     display: grid;
-    grid-template-columns: repeat(auto-fill, 30%);
+    grid-template-columns: repeat(auto-fill, 22%);
     grid-gap: 10px;
     border-radius: 5px;
     border: 1px solid $color6;
@@ -38,25 +38,74 @@
     // size
     width: 10rem;
 }
+.productoCarritoInformacion {
+    // modificacion
+    position: relative;
+    // size
+    top: 10px;
+}
 // text
 .nombreProducto {
+    // size
+    font-size: 18px;
     // color
     color: $color6;
 }
 .precioProducto {
+    // size
+    font-size: 16px;
     // color
     color: $color10;
 }
 .cantidadProducto {
+    // size
+    font-size: 16px;
     // color
     color: $color1;
 }
 .stockProducto {
     // modificacion
+    position: relative;
     // size
-    font-size: 15px;
+    top: -20px;
+    left: -24px;
+    font-size: 14px;
     // color
     color: $color3;
+}
+// producto
+.botonProducto {
+    // modificacion
+    border-radius: 5px;
+    // size
+    margin-left: 12rem;
+    // color
+    background-color: $color6;
+}
+.botonEditProducto {
+    // modificacion
+    transform: scale(1);
+    border: none;
+    border-radius: 5px;
+    // color
+    background-color: $color6;
+    box-shadow: 0px 0px 0px $color6;
+    transition: all 0.3s ease;
+    // size
+    padding: 0px 2px 2px 2px;
+    margin-left: 88%;
+}
+.botonEditProducto:hover {
+    // size
+    transform: translateY(-3px);
+    // color
+    background-color: $color11;
+    box-shadow: 0px 8px 15px $color11;
+}
+// icono
+.iconEdit {
+    // color
+    color: $color7;
 }
 // control carrito
 .seccionControlCarrito {
