arreglo scss stockProducto

--- a/src/scss/items/ItemCountEdit.scss
+++ b/src/scss/items/ItemCountEdit.scss
@@ -58,7 +58,7 @@
     color: $color11;
     filter: drop-shadow(1px 1.5px $color9);
 }
-.stockProducto {
+.stockProductoDetail {
     // modificacion
     position: relative;
     font-size: 12px;
