--- a/src/scss/items/ItemCount.scss
+++ b/src/scss/items/ItemCount.scss
@@ -28,14 +28,14 @@
     margin-right: 10px;
     color: $color6;
 }
-.stockProducto {
+.stockProductoDetail {
     // modificacion
     text-align: center;
     position: relative;
     font-size: 12px;
     // size
     top: -3px;
-    left: 3px;
+    left: 300px;
     width: 174px;
     // color
     color: $color1;
