orden de js y scss

--- a/src/components/navegacion/navBar/navBar.scss
+++ b/src/components/navegacion/navBar/navBar.scss
@@ -1,5 +1,5 @@
 // variables
-@import "../variables";
+@import "../../../scss/variables.scss";
 
 .nav__bar--modificacion {
     align-items: center;
