--- a/src/components/navegacion/cartWidget/CartWidget.scss
+++ b/src/components/navegacion/cartWidget/CartWidget.scss
@@ -1,6 +1,5 @@
 // variables
-@import "../variables";
-
+@import "../../../scss/variables.scss";
 // icono carrito
 .divIconoCarrito {
     // modificacion
