--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -20,6 +20,7 @@ $font2: 'Oswald', sans-serif;;
 $font3: "Century Gothic", CenturyGothic;
 $font4: 'Bebas Neue', regular 400;
 $font5: 'Homenaje', sans-serif;
+$font6: 'Montserrat', sans-serif;
 
 // propiedades
 $mayus: uppercase;
